WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179855
REGRESSION (
r220646
): RenderTreePosition::computeNextSibling hits assertion with certain first-letter mutations
https://bugs.webkit.org/show_bug.cgi?id=179855
Summary
REGRESSION (r220646): RenderTreePosition::computeNextSibling hits assertion w...
Antti Koivisto
Reported
2017-11-17 17:43:37 PST
ASSERTION FAILED: skipAssert || nextSiblingRenderer(node) == m_nextSibling /Users/antti/webkit/OpenSource/Source/WebCore/style/RenderTreePosition.cpp(55) : void WebCore::RenderTreePosition::computeNextSibling(const WebCore::Node &) 1 0x6073a73dd WTFCrash 2 0x5faf770fc WebCore::RenderTreePosition::computeNextSibling(WebCore::Node const&) 3 0x5faf7b5de WebCore::RenderTreeUpdater::createRenderer(WebCore::Element&, WebCore::RenderStyle&&)::$_6::operator()() const 4 0x5faf7a4ed WebCore::RenderTreeUpdater::createRenderer(WebCore::Element&, WebCore::RenderStyle&&) 5 0x5faf79608 WebCore::RenderTreeUpdater::updateElementRenderer(WebCore::Element&, WebCore::Style::ElementUpdate const&) 6 0x5faf78bed WebCore::RenderTreeUpdater::updateRenderTree(WebCore::ContainerNode&) 7 0x5faf784d9 WebCore::RenderTreeUpdater::commit(std::__1::unique_ptr<WebCore::Style::Update const, std::__1::default_delete<WebCore::Style::Update const> >) 8 0x5f9c78ef3 WebCore::Document::resolveStyle(WebCore::Document::ResolveStyleType) 9 0x5f9c7a5e1 WebCore::Document::updateStyleIfNeeded() 10 0x5fa4f71fe WebCore::FrameView::updateLayoutAndStyleIfNeededRecursive() 11 0x11014cef5 WebKit::WebPage::layoutIfNeeded()
Attachments
test case
(504 bytes, text/html)
2017-11-17 17:45 PST
,
Antti Koivisto
no flags
Details
patch
(7.66 KB, patch)
2017-11-17 17:59 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-11-17 17:44:36 PST
<
rdar://problem/35464071
>
Antti Koivisto
Comment 2
2017-11-17 17:45:02 PST
Created
attachment 327288
[details]
test case
Antti Koivisto
Comment 3
2017-11-17 17:59:44 PST
Created
attachment 327292
[details]
patch
WebKit Commit Bot
Comment 4
2017-11-18 03:46:10 PST
Comment on
attachment 327292
[details]
patch Clearing flags on attachment: 327292 Committed
r225014
: <
https://trac.webkit.org/changeset/225014
>
WebKit Commit Bot
Comment 5
2017-11-18 03:46:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug