Source/WebCore: REGRESSION (r220646): REGRESSION (r220646): RenderTreePosition::computeNextSibling hits assertion with certain first-letter mutations https://bugs.webkit.org/show_bug.cgi?id=179855 <rdar://problem/35464071>

Reviewed by Zalan Bujtas.

Test: fast/css-generated-content/first-letter-update-crash.html

* style/RenderTreeUpdaterFirstLetter.cpp:
(WebCore::styleForFirstLetter):
(WebCore::updateFirstLetterStyle):
(WebCore::createFirstLetterRenderer):

    Tighten these to take RenderBlock.

(WebCore::supportsFirstLetter):

    Test exact conditions where first letter renderer is allowed for fast rejection.

(WebCore::RenderTreeUpdater::FirstLetter::update):

    If update was called on a block that doesn't support first letter, getFirstLetter could in
    some cases return an ancestor of the block and we would end up mutating a first letter renderer
    that wasn't current block's descendant. This violates assumptions of the RenderTreeUpdater
    and could cause cached render tree position to become invalid.

    Fix by ensuring we are always updating first letter for the current block only.

LayoutTests:
REGRESSION (r220646): ASSERTION FAILED: skipAssert || nextSiblingRenderer(node) == m_nextSibling
https://bugs.webkit.org/show_bug.cgi?id=179855
<rdar://problem/35464071>

Reviewed by Zalan Bujtas.

* fast/css-generated-content/first-letter-update-crash-expected.txt: Added.
* fast/css-generated-content/first-letter-update-crash.html: Added.


Canonical link: https://commits.webkit.org/195883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225014 268f45cc-cd09-0410-ab3c-d52691b4dbfc